<resources>
    <string name="app_name">TestMind</string>
    <string name="Resume" translatable="false">Resumen</string>
    <string name="preguntas_disponibles">Preguntas disponibles:</string>
    <string name="categorias_disponibles">Categorías disponibles:</string>
    <string name="cuestionarios_realizados">Cuestionarios realizados:</string>
    <string name="calificacion_media">Calificación media:</string>
    <string name="num_preguntas_disponibles" translatable="false">1</string>
    <string name="num_categorias_disponibles" translatable="false">2</string>
    <string name="num_cuestionarios_realizados" translatable="false">3</string>
    <string name="num_calificacion_media" translatable="false">4</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preguntas">Preguntas</string>
    <string name="no_preguntas">Aún no has añadido ninguna pregunta.</string>
    <string name="title_activity_nueva_pregunta">Crear/Editar Pregunta</string>
    <string name="enunciadoPregunta" translatable="false"></string>
    <string name="hintEnunciadoPregunta">Escriba el enunciado</string>
    <string name="hintRespuestaCorrecta">Respuesta Correcta</string>
    <string name="respuestaIncorrecta1" translatable="false"></string>
    <string name="hintRespuestaIncorrecta1">Respuesta incorrecta 1</string>
    <string name="respuestaIncorrecta2" translatable="false"></string>
    <string name="hintRespuestaIncorrecta2">Respuesta Incorrecta 2</string>
    <string name="respuestaIncorrecta3" translatable="false"></string>
    <string name="hintRespuestaIncorrecta3">Respuesta Incorrecta 3</string>
    <string name="buttonGuardarPre">Guardar</string>
    <string name="action_acercaDe">Acerca de</string>
    <string name="action_preguntas">Preguntas</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="write_permission_denied">No se puede guardar la pregunta</string>
    <string name="write_permission_granted">Permisos de escritura concedidos</string>
    <string name="anadirCategoria">+</string>
    <string name="choose">Elige una opción</string>
    <string name="add">Añadir</string>
    <string name="new_option">Nueva opción</string>
    <string name="cancel">Cancelar</string>
    <string name="add_new_option">Añadir nueva opción</string>
    <string name="your_option">Tu opción</string>
    <string name="con_la_ayuda_de">Con la ayuda de  Rafa Morales</string>
    <string name="realizado_por">Realizado por Álvaro Lovera Almagro</string>
    <string name="respuestaCorrecta" translatable="false" />
    <string name="write_permission_accepted" translatable="false">Permisos de escritura aceptados</string>
    <string name="write_permission_not_accepted" translatable="false">Permisos de escritura denegados</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_resume" translatable="false">Resumen</string>
    <string name="imagen">Imagen</string>
    <string name="choose_picture">Elija una imagen</string>
    <string name="error_files">Elija una imagen</string>
    <string name="todo">TODO</string>
    <string name="buttonGaleria">Galeria</string>
    <string name="buttonCamara">Camara</string>
    <string name="action_exportarPreguntas">Exportar las preguntas</string>
    <string name="camera_permission_accepted">Permisos de acceso a cámara aceptados</string>
    <string name="borrar_imagen">Borrar Imagen</string>
    <string name="imaggeViewAnimacion">imaggeViewAnimacion</string>
    <string name="anadirCategoria2">+</string>
</resources>
