<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaPreguntaActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutNuevaPreguntaActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_nueva_pregunta" />

    <EditText
        android:id="@+id/enunciadoPregunta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/hintEnunciadoPregunta"
        android:text="@string/enunciadoPregunta"
        android:autofillHints="" tools:targetApi="o" />

    <Spinner
        android:id="@+id/categoriaPregunta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="180dp" />

    <EditText
        android:id="@+id/respuestaCorrecta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintRespuestaCorrecta"
        android:text="@string/respuestaCorrecta"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/respuestaIncorrecta1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintRespuestaIncorrecta1"
        android:text="@string/respuestaIncorrecta1"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/respuestaIncorrecta2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintRespuestaIncorrecta2"
        android:text="@string/respuestaIncorrecta2"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/respuestaIncorrecta3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintRespuestaIncorrecta3"
        android:text="@string/respuestaIncorrecta3"
        android:autofillHints="" tools:targetApi="o" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonGuardarPre" />

</android.support.design.widget.CoordinatorLayout>